# ChangeLog for sys-kernel/dracut
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> dracut-9999.ebuild:
  Removed keywords.

  06 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> dracut-9999.ebuild:
  New module and corresponding USE flag - bootchart - added.

  Updated run-time dependencies:
    - removed unnecessary sys-auth/nss-mdns
    - removed sys-boot/plymouth (no Plymouth ebuild yet)
    - added app-benchmarks/bootchart for bootchart USE flag

  Dracut doesn't need any dependencies in the build-time except of few to
  convert DocBook documents into the Unix man page format.  That's why all
  previous run-time dependencies were removed from DEPEND and added DocBook
  related.

*dracut-9999 (27 Jul 2010)
*dracut-006-r1 (27 Jul 2010)
*dracut-006 (27 Jul 2010)

  27 Jul 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> +dracut-006.ebuild,
  +files/dracut-006-dhcp6.patch, +files/dracut-006-lc-all-c.patch,
  +dracut-006-r1.ebuild, +files/dracut-006-dm-udev-rules.patch,
  +files/dracut-006-console_init-not-necessary.patch, +dracut-9999.ebuild,
  +metadata.xml:
  Ebuilds moved from my local overlay. Version 006 is slightly updated
  dracut-004.ebuild maintained by Lance Albertson. Later 006-r1 is refactorized
  of the previous and includes new patches. Version 9999 is customized to my
  fork of Dracut on GitHub. Version 006 (bug #324705) is already in official
  Portage tree.  006-r1 is included in bug #329003 and waits for Ramereth's
  acceptance.

  See ChangeLog in Portage tree for full history of Dracut ebuilds.