@@ -5,6 +5,6 @@ AUX dracut-006-lc-all-c.patch 527 RMD160 8f0edd1dc093cec98ed8e57d8cbff528ea97e6d
 DIST dracut-006.tar.bz2 88986 RMD160 e477b3e7d55f450613d4d4b0e7e15816fc943ca1 SHA1 851f8c19a7624e87b2fcae15eba793d0e9b2e101 SHA256 88831d055e1139616a57d5446fecb9f3349dd0edc7c64aa024d7f5ca7e7538fc
 EBUILD dracut-006-r1.ebuild 3886 RMD160 ade2874cb86f98a27cb06938cc74c7f487da1be5 SHA1 fe9326b4dbf234c2ed7d6e1054addb8888217a3a SHA256 fddfeb4ce318f9d19e0f5ffacbc711fe5713ad0234b1a2a077aef49bee67ebeb
 EBUILD dracut-006.ebuild 2798 RMD160 eb26f920daeadd290be0c3459a8c1d9bdf534a54 SHA1 0c147d34a57a38b9c45702c23bdf664b8f507cbc SHA256 6ed507884259003026cacb7e6ee6070e3cb94f6737993bbcdfeafe0653c51420
-EBUILD dracut-9999.ebuild 4800 RMD160 ecd3a36a94c4f4aefe65be367659c7d3ec769e9b SHA1 99bcb66592889cdd13519fe3a5d518177b14d6f1 SHA256 79c9550a76f1ff58d88605e4075d380647b947e2346e577081a1f50f1e589681
-MISC ChangeLog 1640 RMD160 cddc110079b6c991350eb20a1881aa9f4b929340 SHA1 219e12ab47ce484ad31d55cbd92bf1eadda7918f SHA256 9618f6c0fcede3287785ab22d82fa786a5139b374cc538b066e0e1cc94843b46
+EBUILD dracut-9999.ebuild 4848 RMD160 9ee07fc37e8156df33566abca2ee7af8c46693c0 SHA1 87d1e00bdd4e9a9e344463a83eefdb47e0ad04b3 SHA256 dddcca7235bb345998c9c4b16af97f152cf20b4f6f049739bd13ab6d8a58f240
+MISC ChangeLog 1872 RMD160 b3834ff287664f3866b59ebc7ce5ce28e7715840 SHA1 5e5dea05673ee1994ffeb786b1e51e2e5ad73533 SHA256 cc122a73b734e17c51000e560fd1d44f91472b7b7fe73a34a4b1d7d818ac8480
 MISC metadata.xml 1360 RMD160 92275c3c937f105136e1f46f6b97989d72047320 SHA1 27e2e38c6d220b805a6d53e0896da2cf55c8d0eb SHA256 cab242a7bf2bdd982420ea5d94c0ce391096825dca890bc96a3e652b5a5bedde
