@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> dracut-9999.ebuild:
+  New module and corresponding USE flag - gensplash - added.
+
+  Updated run-time dependencies:
+    - added media-gfx/splashutils for gensplash USE flag
+
   08 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> dracut-9999.ebuild:
   Removed keywords.
 
